2008-05-31  Jeffrey Stedfast  <fejj@novell.com>

	* tests/test-headers.c: New set of unit tests for GMimeHeaderIter.

	* gmime/gmime-header.c (g_mime_header_iter_equal): New method to
	check if two iters are equal.
	(g_mime_header_iter_first): New method to update @iter to point to
	the first header.
	(g_mime_header_iter_last): New method to update @iter to point to
	the last header.
	(g_mime_header_iter_next): Fixed.
	(g_mime_header_iter_prev): Fixed.
	(g_mime_header_iter_remove): Invalidate all other iters currently
	pointing to the same header as @iter.

2008-05-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c: Updated for GMimeHeaderList and
	GMimeObject changes.

	* gmime/gmime-message-partial.c: Updated for GMimeHeaderList and
	GMimeObject changes.

	* gmime/gmime-multipart-encrypted.c: Updated for GMimeHeaderList
	and GMimeObject changes.

	* gmime/gmime-multipart-signed.c: Updated for GMimeHeaderList and
	GMimeObject changes.

	* gmime/gmime-multipart.c: Updated for GMimeHeaderList and
	GMimeObject changes.

	* gmime/gmime-part.c: Updated for GMimeHeaderList and GMimeObject
	changes.

	* gmime/gmime-message.c: Updated for GMimeHeaderList and
	GMimeObject changes.

	* gmime/gmime-object.c (g_mime_object_append_header): Renamed from
	g_mime_object_add_header().
	(g_mime_object_prepend_header): New method.
	(remove_header): Cleanup content-header variables if they get
	removed. Don't allow removal of the Content-Type header.

	* gmime/gmime-header.[c,h]: Renamed GMimeHeader to GMimeHeaderList
	and all of it's methods appropriately. Added a new GMimeHeaderIter
	class for iterating over a header list.
	(g_mime_header_list_remove): Return gboolean specifying whether or
	not a header was removed.
	(g_mime_header_list_get_iter): New function to get a header
	iterator.

2008-05-30  Jeffrey Stedfast  <fejj@novell.com>

	* util/cache.c: Updated for list.[c,h] changes.

	* util/list.c (list_append): Renamed from list_append_node().